fix various issues including half-circle dissapearing on small screens and left aligned text in nav bar component

--- a/src/components/Home/HomeContent.css
+++ b/src/components/Home/HomeContent.css
@@ -13,20 +13,26 @@
 .half-circle {
   position: absolute;
   bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
+  /* left: 50%;
+  transform: translateX(-50%); */
   background-image: var(--primary-gradient);
   border-radius: 50% 50% 50% 50% / 100% 100% 0% 0% ;
   width: 100vw;
+  max-width: 100vw;
   height: 400px;
   z-index: -1;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1200px) {
   .home-content  h1{
     padding-top: 0;
+    font-size: 35px;
   }
   .half-circle {
     height: 180px;
+    z-index: 1;
+  }
+  .home-content img {
+    z-index: 2;
   }
 }
